--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "S.M.Mohaimanul Islam",
   "license": "ISC",
   "devDependencies": {
     "cypress-xpath": "^1.6.2"
